# zlnet2.0

./: .gitignore  .gitmodules  CMakeLists.txt  LiunxNet.vcxproj  LiunxNet.vcxproj.filters  ProjectAll.sln  ProjectAll.vcxproj  README.md  WindowsNet.vcxproj  WindowsNet.vcxproj.filters
app/: CMakeLists.txt  Configs.h  Moduel.cpp  Module.h  Server.cpp  Server.h
engine/: CMakeLists.txt  Configs.h  Engine.cpp  Engine.h  Headers.h  IMessage.h  IOEngine.cpp  IOEngine.h  IONotify.h  IOPacket.h  IOProtocolEx.cpp  IOProtocolEx.h  InnerProtocol.cpp  InnerProtocol.h  Messages.cpp  Messages.h  NetEngine.cpp  NetEngine.h  Packet.h  PacketHandlers.cpp  PacketHandlers.h  Protocol.cpp  Protocol.h  Serializes.cpp  Serializes.h
network/: Address.cpp  Address.h  Buffer.cpp  Buffer.h  BufferReader.h  BufferWriter.h  Buffs.h  CMakeLists.txt  Callbacks.h  Common.cpp  Common.h  Configs.h  EPoller.cpp  EPoller.h  Endpoint.cpp  Endpoint.h  EventMsgs.h  IBuffer.h  IIOBuffer.h  IOEvent.h  IOEvents.h  IOObject.cpp  IOObject.h  IOObjects.cpp  IOObjects.h  IOProtocol.cpp  IOProtocol.h  IStream.h  Network.cpp  Network.h  NetworkTcp.cpp  Poller.cpp  Poller.h  RingBuff.cpp  RingBuff.h  RingBuffer.cpp  RingBuffer.h  TCP_IOObjects.cpp  TCP_IOObjects.h  TCP_Network.cpp  (+3 more)
test/: CMakeLists.txt  Configs.h  TestApp.cpp  TestApp.h  TestMessage.cpp  TestMessage.h  TestModule.cpp  TestModule.h  main.cpp  main_app.cpp  main_win.cpp
